--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,12 @@
         {
             "format": "expanded",
             "extensionName": ".css",
-            "savePath": "assets/css"
+            "savePath": "/css"
         },
         {
             "format": "compressed",
             "extensionName": ".min.css",
-            "savePath": "assets/css"
+            "savePath": "/css"
         }
     ],
     "liveSassCompile.settings.autoprefix": [
