--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,14 +11,13 @@
             "savePath": "/css"
         }
     ],
-    "liveSassCompile.settings.autoprefix": [
-        "> 1%",
-        "last 10 versions"
-    ],
-    "liveSassCompile.settings.generateMap": false,
-    "liveServer.settings.port": 1235,
     "liveSassCompile.settings.excludeList": [
         "**/node_modules/**",
         ".vscode/**"
     ],
+    "liveSassCompile.settings.generateMap": true,
+    "liveSassCompile.settings.autoprefix": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
